src/objects/dyfr__Field_Config__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_counter_number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Blank_in_edit_mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank in edit mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Column_Size__c</fullName>
        <inlineHelpText>By default, it is taking one column</inlineHelpText>
        <label>Column Size</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Default_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__DeveloperName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Developer name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dyfr__Full_width__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full width</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Hidden_in_edit_mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden in edit mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Important__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Lightning_component_api_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lightning component api name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Lightning_component_attributes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lightning component attributes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dyfr__Lower_limit__c</fullName>
        <label>Lower limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Map_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Map field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__MaxLength__c</fullName>
        <description>Include the maximum length for text/textarea/textarealong fields</description>
        <inlineHelpText>Include the maximum length for text/textarea/textarealong fields</inlineHelpText>
        <label>MaxLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Read_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dyfr__Relationship_Dynamic_Label_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Dynamic Label Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Relationship_Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Relationship_Query_Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the content of the id to look for the related record</inlineHelpText>
        <label>Relationship Query Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Relationship_Query_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Query Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Section_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Section name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Section_order__c</fullName>
        <label>Section order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Subsection_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subsection name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Subsection_order__c</fullName>
        <label>Subsection order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Tab__c</fullName>
        <label>Tab</label>
        <referenceTo>dyfr__Tab__c</referenceTo>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dyfr__Tooltip__c</fullName>
        <description>Defines helptext for field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Add helptexto to a field</inlineHelpText>
        <label>Tooltip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dyfr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>datetime</fullName>
                </value>
                <value>
                    <fullName>checkbox</fullName>
                </value>
                <value>
                    <fullName>LIST</fullName>
                </value>
                <value>
                    <fullName>textArea</fullName>
                </value>
                <value>
                    <fullName>textAreaLong</fullName>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>reference</fullName>
                </value>
                <value>
                    <fullName>multiselect</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
                <value>
                    <fullName>blank</fullName>
                </value>
                <value>
                    <fullName>lightning component</fullName>
                </value>
                <value>
                    <fullName>radio group</fullName>
                </value>
                <value>
                    <fullName>divider</fullName>
                </value>
                <value>
                    <fullName>complex</fullName>
                    <isActive>false</isActive>
                    <label>complex</label>
                </value>
                <value>
                    <fullName>guarantee</fullName>
                    <isActive>false</isActive>
                    <label>guarantee</label>
                </value>
                <value>
                    <fullName>intervener</fullName>
                    <isActive>false</isActive>
                    <label>intervener</label>
                </value>
                <value>
                    <fullName>radio button</fullName>
                    <isActive>false</isActive>
                    <label>radio button</label>
                </value>
                <value>
                    <fullName>table</fullName>
                    <isActive>false</isActive>
                    <label>table</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dyfr__Upper_limit__c</fullName>
        <label>Upper limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dyfr__Values_control_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Values control field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Visibility_condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visibility condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dyfr__Visibility_control_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visibility control field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dyfr__Visibility_control_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visibility control value</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Field Config</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Field Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>